kmainwindow: Pre-fill translator information when available.

KCoreAddons's KAboutData can store information about the translators for
the application when using non-en_US messages. This information is
encoded by translating a specific message string, which can no longer be
done within KAboutData (compared to KDE 4) since KCoreAddons can't use
KI18n.

Applications have been able to manually add translator information, but
there's no reason we can't do this by default for the majority of
our KF5-based applications.

Combined with updates to the KAboutData API documentation I believe this
should also fix bug 345320.

BUG:345320
FIXED-IN:5.16
REVIEW:125682